[FLINK-33453][build] Add java21-target profile